# graph-teacher

./: .gitignore  LICENSE  README.md  exp_book_baseline.py  exp_book_gnn.py  how_big.py  pyproject.toml  sweep_baseline.py  sweep_graph_teacher.py
baseline/: __init__.py  dataloader.py  dataset.py  hyperparams.py  models.py  pipeline.py  runner.py  tokenizer.py  trainer.py  utils.py
commons/: early_stopper.py
graph_teacher/: __init__.py  dataset.py  hyperparams.py  models.py  pipeline.py  runner.py  trainer.py
