[tool.poetry]
name = "graph-teacher"
version = "0.1.0"
description = ""
authors = ["Arda Can Aras <ardaaras99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^2.15.0"
transformers = "^4.46.3"
torch = "^2.5.1"
wandb = "^0.18.7"
scikit-learn = "^1.5.2"
pyyaml = "^6.0.2"
torch-geometric = "^2.6.1"
evaluate = "^0.4.3"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 300

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.extend-per-file-ignores]
"*" = ["S101", "S301", "S311"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
