[project]
name = "graph-teacher"
version = "0.1.0"
description = "UMRAM GraphTeacher"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "torch-geometric>=2.6.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "wandb>=0.19.6",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.6",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
